<resources>
    <string name="app_name">Task Killer</string>
    <string name="taskTitle">What are you going to do?</string>
    <string name="checklistItem">Add a sub-task here…</string>
    <string name="smashThatTask">Smash that task!</string>
    <string name="beAWinner">Be a winner!</string>
    <string name="onlyWimpsGiveUp">Only wimps give up!</string>
    <string name="dontBeAFailure">Don\'t be a failure!</string>
    <string name="beVictorious">Be victorious!</string>
    <string name="taskReinstated">Task reinstated.</string>
    <string name="killThisTask">Kill this task!</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="twelveNumerals">12</string>
    <string name="colonZero">:0</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="youKilledThisTask">You killed that task!</string>
    <string name="youCanCancelRepeat">HINT: You can cancel repeat in alarm options.</string>
    <string name="taskNotSnoozedBecause">Task not snoozed because repeat alarm is due.</string>
    <string name="cancelSnooze">Cancel snooze</string>
    <string name="cannotSetTask">Cannot set task to be due in the past.</string>
    <string name="removeAds">Remove Ads</string>
    <string name="permanentlyRemoveAds">Permanently remove all ads.</string>
    <string name="getReminders">Get Reminders</string>
    <string name="setUnlimitedDueDates">Set unlimited due dates and get notifications on your device.</string>
    <string name="cycleColors">Cycle Colours</string>
    <string name="featureColorSlowly">The feature colour will change several times a day.</string>
    <string name="unlockAll">Unlock All</string>
    <string name="ultimateValuePack">Ultimate value pack. Get all in-app purchases.</string>
    <string name="addYourNote">Add your note here…</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="oneHour">1 Hour</string>
    <string name="fourHours">4 Hours</string>
    <string name="snooze">Snooze</string>
    <string name="done">Done</string>
    <string name="ignore">Ignore</string>
    <string name="setDue">Set Due</string>
    <string name="subTasks">Subtasks</string>
    <string name="getItDone">Get it done!</string>
    <string name="colorCyclingEnabled">When enabled, colours will change several times a day.</string>
    <string name="longClickToRename">HINT: Long click task to rename.</string>
    <string name="chooseColor">Choose Colour</string>
    <string name="oK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="longClickToReinstate">HINT: Long click to reinstate a completed task.</string>
    <string name="note">Note</string>
    <string name="addDate">+Add due date</string>
    <string name="addTime">+Add due time</string>
    <string name="setDateTime">Set Date/Time</string>
    <string name="zero">0</string>
    <string name="noExcuses">No Excuses</string>
    <string name="excusesAreForTheWeak">Excuses are for the weak.</string>
    <string name="looksLikeYouveBeen">Looks like you\'ve been productive.</string>
    <string name="whyNoteLeaveAReview">Why not leave a review?</string>
    <string name="later">Later…</string>
    <string name="oKExclamation">OK!</string>
    <string name="darkMode">Dark Mode</string>
    <string name="changeColor">Change Colour…</string>
    <string name="cycleColorsAuto">Cycle Colours Automatically</string>
    <string name="soundFX">Sound FX</string>
    <string name="motivation">Motivation</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="generic_looking_ad_that_has_been_crossed_out">Generic looking ad that has been crossed out</string>
    <string name="accessAdCrossedOutPurchased">Generic looking ad that has been crossed out in gray scale to indicate it has been purchased.</string>
    <string name="accessGenericLookingAd">Generic looking ad that has been crossed out.</string>
    <string name="accessBell">Gold notification bell</string>
    <string name="accessBellPurchased">Notification bell in gray scale to indicate it has been purchased.</string>
    <string name="accessArrowCircular">Arrow in circular shape in rainbow colors.</string>
    <string name="accessArrowCircularPurchased">Arrow in circular shape in gray scale to indicate purchase.</string>
    <string name="accessAllInAppImages">All images of in-app purchases displayed together.</string>
    <string name="accessAllInAppImagesGray">All images off in-app purchases displayed together in gray scale to indicate that this package is unavailable</string>
    <string name="accessNoTasks">Scope of gun looking at large tick covered with bullet wounds.</string>
    <string name="accessEmptyCheckbox">Empty checkbox</string>
    <string name="accessCheckboxTick">Checkbox with a tick in it.</string>
    <string name="accessGrayedOutCalendar">Grayed out calendar to indicate that no date is set.</string>
    <string name="accessCalendar">White and red calendar.</string>
    <string name="accessGrayedOutClock">Grayed out alarm clock indicating that time has not been set.</string>
    <string name="accessClock">Red and gray alarm clock.</string>
    <string name="accessNoRepeat">Circular arrow that says no repeat.</string>
    <string name="accessDailyRepeat">Circular arrow that says daily repeat.</string>
    <string name="accessMonthlyRepeat">Circular arrow that says monthly repeat.</string>
    <string name="accessSubmitButton">Arrow representing a submit button.</string>
    <string name="accessWhiteTick">White tick on red background with gun scope over it.</string>
    <string name="bannerPromptingUser">Banner prompting user to upgrade.</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appNameFull">Task Killer: No Excuses Todo List</string>
    <string name="accessTrashCan">Gray trash can representing a delete button.</string>
    <string name="buy">Buy</string>
    <string name="accessMushroomCloudTick">Mushroom cloud with tick and five stars.</string>
    <string name="alarm">Alarm</string>
    <string name="turnColorCyclingOnOff">Turn colour cycling on/off in the top right menu.</string>
    <string name="accessPlusSign">Plus sign for adding tasks.</string>
    <string name="taskDeleted">Task deleted</string>
    <string name="upgradeLater"><u>Not now. I\'ll upgrade later.</u></string>
    <string name="accessWeeklyRepeat">Circular arrow that says weekly repeat.</string>

</resources>
