<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/itemBuy"
        android:title="@string/buy"
        android:orderInCategory="1"
        android:icon="@drawable/pro"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemDarkMode"
        android:orderInCategory="2"
        android:title="@string/darkMode"
        app:showAsAction="collapseActionView"
        android:checkable="true"/>

    <item
        android:id="@+id/itemHighlight"
        android:title="@string/changeColor"
        app:showAsAction="collapseActionView"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/itemAutoColor"
        android:title="@string/cycleColorsAuto"
        app:showAsAction="collapseActionView"
        android:orderInCategory="4"
        android:checkable="true"
        android:checked="false"/>

    <item
        android:id="@+id/itemMute"
        android:title="@string/soundFX"
        app:showAsAction="collapseActionView"
        android:orderInCategory="5"
        android:checkable="true"/>

    <item
        android:id="@+id/itemMotivation"
        android:title="@string/motivation"
        app:showAsAction="collapseActionView"
        android:orderInCategory="6"
        android:checkable="true"/>

</menu>